--- a/code/ContactApp/package.json
+++ b/code/ContactApp/package.json
@@ -10,9 +10,25 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/material-top-tabs": "^6.6.14",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
     "react": "18.3.1",
     "react-native": "0.75.1",
     "react-native-fast-image": "^8.6.3",
+    "react-native-gesture-handler": "^2.18.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "^6.4.0",
+    "react-native-reanimated": "^3.15.0",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-ui-lib": "^7.29.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
